--- a/client/src/components/Contact/style.css
+++ b/client/src/components/Contact/style.css
@@ -1,4 +1,5 @@
 .contactContainer {
+    text-align: center;
     margin-top: 1em;
     margin-bottom: 5em;
     font-family: "Cairo", sans-serif;
